Setup basic security and authorization
1. Setup security now we have authorized and unauthorized users.
2. Add /signin, /signin/logout endpoints(take a look at swagger file)
3. API for deezer now automatically register and login user in system.
4. Secure endpoints for music. Only authorized users can access them now.
Minor changes:
1. Improve tests they now run faster.
2. Improve logging over all project.
