# server/src/main/java/org/room/apollo/server/security/SecurityConfiguration.java
@@ -1,0 +1,68 @@
+package org.room.apollo.server.security;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.password.PasswordEncoder;
+
+@Configuration
+@EnableWebSecurity
+public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
+
+    private final UserDetailsService userDetailsService;
+
+    private final PasswordEncoder encoder;
+
+    @Autowired
+    public SecurityConfiguration(UserDetailsService userDetailsService, PasswordEncoder encoder) {
+        this.userDetailsService = userDetailsService;
+        this.encoder = encoder;
+    }
+
+    /**
+     * Configure how we would authentificate user.
+     */
+    @Override
+    protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+        auth.userDetailsService(userDetailsService).passwordEncoder(encoder);
+
+    }
+
+    /**
+     * We need this been to manually authenticate users from external API.
+     */
+    @Bean
+    @Override
+    public AuthenticationManager authenticationManagerBean() throws Exception {
+        return super.authenticationManagerBean();
+    }
+
+    /**
+     * Main configuration configuring endpoints and rules.
+     */
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        http.userDetailsService(userDetailsService)
+                .authorizeRequests()
+                .antMatchers("/signin/**", "/registration/**", "/test/**", "/").permitAll()
+                .antMatchers("/**").authenticated()
+                .and()
+                .formLogin().usernameParameter("username").passwordParameter("password")
+                .loginPage("/signin")
+                .successForwardUrl("/signin/success")
+                .failureForwardUrl("/signin/failed").permitAll().and()
+                .logout().invalidateHttpSession(true).logoutUrl("/signin/logout").permitAll()
+                .and()
+                .rememberMe()
+                .and()
+                .csrf().disable();
+    }
+
+
+}
